# psl

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/psl/: Cargo.toml
crates/psl/src/: lib.rs  main.rs
crates/psl/src/ast/: declarations.rs  expressions.rs  fragments.rs  items.rs  mod.rs  program.rs  statements.rs  token.rs
crates/psl/src/codegen/: context.rs  mod.rs  scope.rs  visitor.rs
crates/psl/src/codegen/construct/: mod.rs  scope.rs  type.rs
crates/psl/src/codegen/impls/: item.rs  mod.rs  program.rs
crates/psl/src/codegen/impls/declarations/: function_declaration.rs  mod.rs  variable_declaration.rs
crates/psl/src/codegen/impls/expressions/: binary_operator.rs  block.rs  if.rs  literal.rs  mod.rs  (+4 more)
crates/psl/src/codegen/pass/: mod.rs  name_resolution.rs
crates/psl/src/codegen/rt/: header.h  panic.h  read.h  typedef.h  write.h
crates/psl/src/diagnostics/: diagnostic_code.rs  mod.rs
crates/psl/src/diagnostics/transform/: mod.rs  parse_error.rs
crates/psl/src/syntax/: item.rs  mod.rs  program.rs
crates/psl/src/syntax/declarations/: function_declaration.rs  mod.rs  variable_declaration.rs
crates/psl/src/syntax/expressions/: binary_operator.rs  block.rs  if.rs  literal.rs  mod.rs  name.rs  operator.rs  postfix_operator.rs  read.rs  return.rs  simple.rs
crates/psl/src/syntax/fragments/: block.rs  format_specifier.rs  mod.rs  separator.rs  type.rs
crates/psl/src/syntax/statements/: assignment.rs  mod.rs  while.rs  write.rs
crates/psl/src/syntax/tokens/: identifier.rs  keyword.rs  literal.rs  mod.rs  punctuations.rs  whitespaces.rs
(+25 files in other folders)
