[package]
name = "psl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
line-span = "0.1.5"
unicode-ident = "1.0.12"
unicode-width = "0.1.11"
winnow = "0.5.17"

[dev-dependencies]
pretty_assertions = "1.4.0"
